# wyrdwest

./: docker-compose.yml
service/: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  Dockerfile-integration  LICENSE  Makefile  README.md  build-docker.sh  dbconfig.yml  docker-compose.integration.yml  docker-compose.yml  go.mod  go.sum  log4rs.yml  mix.exs  package.json  tslint.json
service/benches/: password_benchmark.rs
service/cmd/service/: database.go  main.go
service/config/: config.exs
service/docker/: start.sh
service/integration/: attributes_test.go  health_test.go  integration_suite.go  integration_suite_test.go
service/integration/database/: clean.go  seed.go  tester.go
service/integration/health/: health_test.go
service/integration/http/: json.go  tester.go
service/internal/api/: writer.go  writer_test.go
service/internal/database/: db.go  errors.go  health.go  health_test.go  query.go  query_test.go
service/internal/health/: healthcheck.go  http.go  http_test.go
service/internal/oauth2/: errors.go  model.go  service.go
service/internal/problems/: model.go
service/internal/server/: server.go
service/internal/service/: page.go  sorts.go  sorts_test.go
service/lib/: service.ex
service/migrations/: 0001.users.up.sql  1556308053970_users-table.js  1556605627147_oauth2-clients-table.js  1556606277158_oauth2-client-defaults.js  20190317105338-attributes-table.sql  20190412125202-users.sql  20190412125548-oauth2-clients.sql
service/rel/: config.exs
service/src/: config.rs  index.ts  lib.rs  main.rs  model.rs  nothing.spec.ts
(+129 files in other folders)
