[package]
name = "wyrdwest_service"
version = "0.1.0"
authors = ["Graham Cox <graham@grahamcox.co.uk>"]
edition = "2018"

[dependencies]
log = "0.4.6"
log4rs = "0.8.3"
config = "0.9.2"
actix-web = "0.7.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "0.4.12"
assert-json-diff = "1.0.0"
