[package]
name = "wyrdwest_service"
version = "0.1.0"
authors = ["Graham Cox <graham@grahamcox.co.uk>"]
edition = "2018"

[dependencies]
log = "0.4.6"
log4rs = "0.8.3"
envy = "0.4.0"
dotenv = "0.13.0"
actix-web = "0.7.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "0.4.12"
r2d2 = "0.8.4"
r2d2_postgres = "0.15.0-rc.1"
postgres = "0.16.0-rc.1"
dbmigrate-lib = "0.1.4"
rand = "0.3"
rust-argon2 = "0.4.0"
failure = "0.1.5"

[dev-dependencies]
assert-json-diff = "1.0.0"
criterion = "0.2.11"

[[bench]]
name = "password_benchmark"
harness = false
